--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa2-webpack",
   "version": "1.0.0",
-  "description": "koa middleware for webpack (HMR)",
+  "description": "koa2 middleware for webpack (HMR)",
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
@@ -14,7 +14,7 @@
     "hmr"
   ],
   "engines": {
-    "node": ">=7.2.0"
+    "node": ">=7.0.0"
   },
   "repository": {
     "type": "git",
